Queues and assertions.
committer: William Pitcock <nenolod@chocobo.sacredspiral.co.uk>

--- a/src/libmowgli/Makefile
+++ b/src/libmowgli/Makefile
@@ -17,9 +17,7 @@ SOURCES = \
 	mowgli_memorypool.c \
 	mowgli_module.c \
 	mowgli_object.c \
-	mowgli_queue.c \
-	mowgli_sequence.c \
-	mowgli_stack.c
+	mowgli_queue.c
 
 OBJECTS = ${SOURCES:.c=.o}
 
