Add hashing functions based on FNV-1.
committer: William Pitcock <nenolod@chocobo.sacredspiral.co.uk>

--- a/src/libmowgli/Makefile
+++ b/src/libmowgli/Makefile
@@ -13,6 +13,7 @@ CFLAGS += $(PICFLAGS) -I..
 SOURCES = \
 	mowgli_alloc.c \
 	mowgli_dictionary.c \
+	mowgli_hash.c \
 	mowgli_list.c \
 	mowgli_memorypool.c \
 	mowgli_module.c \
