Add mowgli_init(). Make the list node allocator use a heap instead of mowgli_alloc().
committer: William Pitcock <nenolod@chocobo.sacredspiral.co.uk>

--- a/src/libmowgli/Makefile
+++ b/src/libmowgli/Makefile
@@ -15,6 +15,7 @@ SOURCES = \
 	mowgli_dictionary.c \
 	mowgli_hash.c \
 	mowgli_heap.c \
+	mowgli_init.c \
 	mowgli_list.c \
 	mowgli_memorypool.c \
 	mowgli_module.c \
@@ -33,6 +34,7 @@ HEADERS = \
 	mowgli_dictionary.h \
 	mowgli_hash.h \
 	mowgli_heap.h \
+	mowgli_init.h \
 	mowgli_list.h \
 	mowgli_memorypool.h \
 	mowgli_module.h \
