--- a/mk/rules.mk.in
+++ b/mk/rules.mk.in
@@ -333,3 +333,4 @@ AUDLDFLAGS ?= @AUDLDFLAGS@
 INTL_OBJECTIVE ?= @INTL_OBJECTIVE@
 LIBMCS_CFLAGS ?= @LIBMCS_CFLAGS@
 LIBMCS_LIBS ?= @LIBMCS_LIBS@
+DYNAMIC_LD_LIBS ?= @DYNAMIC_LD_LIBS@
