Add some more checks to configure.
committer: William Pitcock <nenolod@chocobo.sacredspiral.co.uk>

--- a/configure.ac
+++ b/configure.ac
@@ -29,8 +29,8 @@ AC_C_CONST
 
 # Checks for library functions.
 AC_FUNC_CLOSEDIR_VOID
-AC_CHECK_FUNCS([strstr], , [AC_ERROR([strstr is required for the plugin loader, sorry.])])
 AC_CHECK_FUNCS([memset setlocale strcasecmp strchr strdup strerror strtol strtod])
+AC_CHECK_FUNCS([printf sprintf snprintf vsnprintf mmap gettimeofday strndup strlcpy strlcat])
 AC_FUNC_STAT
 
 # Check for optional features.
