Add exception support. try/catch not yet implemented.
committer: William Pitcock <nenolod@chocobo.sacredspiral.co.uk>

--- a/src/libmowgli/Makefile
+++ b/src/libmowgli/Makefile
@@ -37,6 +37,7 @@ HEADERS = \
 	mowgli_bitvector.h \
 	mowgli_config.h \
 	mowgli_dictionary.h \
+	mowgli_exception.h \
 	mowgli_hash.h \
 	mowgli_heap.h \
 	mowgli_hook.h \
