Add --enable-examples to enable building and installation of example programs.
committer: William Pitcock <nenolod@chocobo.atheme.org>

--- a/mk/rules.mk.in
+++ b/mk/rules.mk.in
@@ -334,3 +334,4 @@ INTL_OBJECTIVE ?= @INTL_OBJECTIVE@
 LIBMCS_CFLAGS ?= @LIBMCS_CFLAGS@
 LIBMCS_LIBS ?= @LIBMCS_LIBS@
 DYNAMIC_LD_LIBS ?= @DYNAMIC_LD_LIBS@
+EXAMPLES_BUILD ?= @EXAMPLES_BUILD@
