--- a/src/examples/Makefile
+++ b/src/examples/Makefile
@@ -1,6 +1,6 @@
 include ../../mk/rules.mk
 include ../../mk/init.mk
 
-SUBDIRS = randomtest
+SUBDIRS = randomtest listsort
 
 include ../../mk/objective.mk
