--- a/src/libmowgli/Makefile
+++ b/src/libmowgli/Makefile
@@ -8,7 +8,7 @@ OBJECTIVE_SONAME_SUFFIX = 1
 
 LIBADD += $(DYNAMIC_LD_LIBS)
 
-CFLAGS += $(PICFLAGS) -I..
+CFLAGS += $(PICFLAGS) -I.. -DMOWGLI_CORE
 
 SOURCES = \
 	mowgli_alloc.c \
