Add mowgli_object_class_t and rework mowgli_object_t to use mowgli_object_class_t. Adjust mowgli_object_init() where appropriate.
committer: William Pitcock <nenolod@chocobo.atheme.org>

--- a/src/libmowgli/Makefile
+++ b/src/libmowgli/Makefile
@@ -25,6 +25,7 @@ SOURCES = \
 	mowgli_mempool.c \
 	mowgli_module.c \
 	mowgli_object.c \
+	mowgli_object_class.c \
 	mowgli_queue.c \
 	mowgli_random.c \
 	mowgli_signal.c
@@ -52,6 +53,7 @@ HEADERS = \
 	mowgli_mempool.h \
 	mowgli_module.h \
 	mowgli_object.h \
+	mowgli_object_class.h \
 	mowgli_queue.h \
 	mowgli_random.h \
 	mowgli_signal.h \
