Add mowgli.object_messaging library.
committer: William Pitcock <nenolod@chocobo.atheme.org>

--- a/src/libmowgli/Makefile
+++ b/src/libmowgli/Makefile
@@ -28,6 +28,7 @@ SOURCES = \
 	mowgli_module.c \
 	mowgli_object.c \
 	mowgli_object_class.c \
+	mowgli_object_messaging.c \
 	mowgli_queue.c \
 	mowgli_random.c \
 	mowgli_signal.c
@@ -58,6 +59,7 @@ HEADERS = \
 	mowgli_module.h \
 	mowgli_object.h \
 	mowgli_object_class.h \
+	mowgli_object_messaging.h \
 	mowgli_queue.h \
 	mowgli_random.h \
 	mowgli_signal.h \
