Add support for building on MacOS targets.

--- a/configure.ac
+++ b/configure.ac
@@ -7,6 +7,7 @@ AC_CONFIG_SRCDIR([src/libmowgli/mowgli_alloc.c])
 AC_CONFIG_HEADER([src/libmowgli/mowgli_config.h])
 
 # Checks for programs.
+AC_CANONICAL_HOST
 AC_PROG_CC
 AC_PROG_INSTALL
 AC_PROG_MAKE_SET
@@ -48,6 +49,18 @@ fi
 AC_SUBST(EXAMPLES_BUILD)
 
 # Module support
+AC_MSG_CHECKING([if you are running Apple-GCC])
+case "$target" in
+        *-apple-*)
+                AC_MSG_RESULT([yes, sorry you poor bastard])
+                LDFLAGS="$LDFLAGS -Wl,-framework -Wl,CoreFoundation -Wl,-framework -Wl,CoreServices"
+                ;;
+        *)
+                AC_MSG_RESULT([no])
+                ;;
+esac
+AC_SUBST(LDFLAGS)
+
 AC_MSG_CHECKING([for what extension and flags to use for library compilation])
 case "$target" in
         *-apple-*)
@@ -71,18 +84,6 @@ AC_SUBST(LIBLDFLAGS)
 AC_SUBST(SHARED_SUFFIX)
 AC_DEFINE_UNQUOTED(SHARED_SUFFIX, "${SHARED_SUFFIX}",
         [Define the shared module suffix extension on your platform.])
-
-AC_MSG_CHECKING([if you are running Apple-GCC])
-case "$target" in
-        *-apple-*)
-                AC_MSG_RESULT([yes, sorry you poor bastard])
-                LDFLAGS="$LDFLAGS -Wl,-framework -Wl,CoreFoundation -Wl,-framework -Wl,CoreServices"
-                ;;
-        *)
-                AC_MSG_RESULT([no])
-                ;;
-esac
-
 
 AC_CONFIG_FILES([libmowgli.pc mk/rules.mk])
 AC_OUTPUT
