Add mowgli_allocation_policy, allows for the allocation system to be overriden.

--- a/src/libmowgli/Makefile
+++ b/src/libmowgli/Makefile
@@ -12,6 +12,7 @@ CFLAGS += $(PICFLAGS) -I.. -DMOWGLI_CORE
 
 SOURCES = \
 	mowgli_alloc.c \
+	mowgli_allocation_policy.c \
 	mowgli_argstack.c \
 	mowgli_bitvector.c \
 	mowgli_dictionary.c \
@@ -44,6 +45,7 @@ INCLUDEDIR = ${prefix}/include/libmowgli
 HEADERS = \
 	mowgli.h \
 	mowgli_alloc.h \
+	mowgli_allocation_policy.h \
 	mowgli_argstack.h \
 	mowgli_assert.h \
 	mowgli_bitvector.h \
