Add mowgli_allocator_malloc, the highlevel malloc-based allocation policy.

--- a/src/libmowgli/Makefile
+++ b/src/libmowgli/Makefile
@@ -13,6 +13,7 @@ CFLAGS += $(PICFLAGS) -I.. -DMOWGLI_CORE
 SOURCES = \
 	mowgli_alloc.c \
 	mowgli_allocation_policy.c \
+	mowgli_allocator.c \
 	mowgli_argstack.c \
 	mowgli_bitvector.c \
 	mowgli_dictionary.c \
@@ -46,6 +47,7 @@ HEADERS = \
 	mowgli.h \
 	mowgli_alloc.h \
 	mowgli_allocation_policy.h \
+	mowgli_allocator.h \
 	mowgli_argstack.h \
 	mowgli_assert.h \
 	mowgli_bitvector.h \
