--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,4 @@
-include ../mk/rules.mk
-include ../mk/init.mk
+SUBDIRS = libmowgli ${EXAMPLES_BUILD}
 
-SUBDIRS = libmowgli $(EXAMPLES_BUILD)
-
-include ../mk/objective.mk
+include ../buildsys.mk
+include ../extra.mk
