--- a/src/examples/Makefile
+++ b/src/examples/Makefile
@@ -1,6 +1,3 @@
-include ../../mk/rules.mk
-include ../../mk/init.mk
-
 SUBDIRS = randomtest listsort formattertest dicttest
 
-include ../../mk/objective.mk
+include ../../buildsys.mk
