Library versions are now portable.

--- a/buildsys.mk.in
+++ b/buildsys.mk.in
@@ -35,11 +35,10 @@ ERLCFLAGS = @ERLCFLAGS@
 OBJCFLAGS = @OBJCFLAGS@
 LDFLAGS = @LDFLAGS@
 LIBS = @LIBS@
-SHARED_CFLAGS = @SHARED_CFLAGS@
-SHARED_LDFLAGS = @SHARED_LDFLAGS@
-SHARED_PREFIX = @SHARED_PREFIX@
-SHARED_PREVER = @SHARED_PREVER@
-SHARED_POSTVER = @SHARED_POSTVER@
+LIB_CFLAGS = @LIB_CFLAGS@
+LIB_LDFLAGS = @LIB_LDFLAGS@
+LIB_PREFIX = @LIB_PREFIX@
+LIB_SUFFIX = @LIB_SUFFIX@
 LN_S = @LN_S@
 INSTALL = @INSTALL@
 SHELL = @SHELL@
@@ -98,7 +97,7 @@ ${PROG} ${PROG_NOINST}: ${EXT_DEPS} ${OBJS}
 ${LIB} ${LIB_NOINST}: ${EXT_DEPS} ${OBJS}
 	${LINK_STATUS}
 	i=${LIB}; \
-	if ${LD} -o $@ ${OBJS} ${SHARED_LDFLAGS} ${LDFLAGS} ${LIBS} && \
+	if ${LD} -o $@ ${OBJS} ${LIB_LDFLAGS} ${LDFLAGS} ${LIBS} && \
 	    ${LN_S} -f $$i $${i%.so.*}.so; then \
 		${LINK_OK}; \
 	else \
