--- a/.hgignore
+++ b/.hgignore
@@ -7,6 +7,10 @@ config.status
 configure
 extra.mk
 libmowgli.pc
+src/examples/dicttest/dicttest
+src/examples/formattertest/formattertest
+src/examples/listsort/listsort
+src/examples/randomtest/randomtest
 src/libmowgli/mowgli_config.h
 src/libmowgli/mowgli_config.h.in
 .deps
