--- a/buildsys.mk.in
+++ b/buildsys.mk.in
@@ -100,9 +100,7 @@ ${PROG} ${PROG_NOINST}: ${EXT_DEPS} ${OBJS}
 
 ${LIB} ${LIB_NOINST}: ${EXT_DEPS} ${OBJS}
 	${LINK_STATUS}
-	i=${LIB}; \
-	if ${LD} -o $@ ${OBJS} ${LIB_LDFLAGS} ${LDFLAGS} ${LIBS} && \
-	    ${LN_S} -f $$i $${i%.so.*}.so; then \
+	if ${LD} -o $@ ${OBJS} ${LIB_LDFLAGS} ${LDFLAGS} ${LIBS}; then \
 		${LINK_OK}; \
 	else \
 		${LINK_FAILED}; \
@@ -336,13 +334,6 @@ distclean: clean
 	for i in ${LIB} ${LIB_NOINST}; do \
 		if [ -f $$i ]; then \
 			if rm -f $$i; then \
-				${DELETE_OK}; \
-			else \
-				${DELETE_FAILED}; \
-			fi \
-		fi; \
-		if [ -h $${i%.so.*}.so ]; then \
-			if rm -f $${i%.so.*}.so; then \
 				${DELETE_OK}; \
 			else \
 				${DELETE_FAILED}; \
