--- a/src/examples/formattertest/Makefile
+++ b/src/examples/formattertest/Makefile
@@ -1,7 +1,7 @@
 PROG_NOINST = formattertest
 SRCS = formattertest.c
 
-include ../../../buildsys.mk
+include ../../../mk/buildsys.mk
 
 CPPFLAGS += -I../../libmowgli
 LIBS += -L../../libmowgli -lmowgli
