--- a/buildsys.mk.in
+++ b/buildsys.mk.in
@@ -40,6 +40,7 @@ LIB_CFLAGS = @LIB_CFLAGS@
 LIB_LDFLAGS = @LIB_LDFLAGS@
 LIB_PREFIX = @LIB_PREFIX@
 LIB_SUFFIX = @LIB_SUFFIX@
+PLUGIN_LDFLAGS = @PLUGIN_LDFLAGS@
 SYMLINK_LIB = @SYMLINK_LIB@
 UNSYMLINK_LIB = @UNSYMLINK_LIB@
 LN_S = @LN_S@
