Also add PLUGIN_CPPFLAGS and PLUGIN_CFLAGS.

--- a/buildsys.mk.in
+++ b/buildsys.mk.in
@@ -40,6 +40,8 @@ LIB_CFLAGS = @LIB_CFLAGS@
 LIB_LDFLAGS = @LIB_LDFLAGS@
 LIB_PREFIX = @LIB_PREFIX@
 LIB_SUFFIX = @LIB_SUFFIX@
+PLUGIN_CPPFLAGS = @PLUGIN_CPPFLAGS@
+PLUGIN_CFLAGS = @PLUGIN_CFLAGS@
 PLUGIN_LDFLAGS = @PLUGIN_LDFLAGS@
 SYMLINK_LIB = @SYMLINK_LIB@
 UNSYMLINK_LIB = @UNSYMLINK_LIB@
