--- a/buildsys.mk.in
+++ b/buildsys.mk.in
@@ -43,6 +43,7 @@ LIB_SUFFIX = @LIB_SUFFIX@
 PLUGIN_CPPFLAGS = @PLUGIN_CPPFLAGS@
 PLUGIN_CFLAGS = @PLUGIN_CFLAGS@
 PLUGIN_LDFLAGS = @PLUGIN_LDFLAGS@
+PLUGIN_SUFFIX = @PLUGIN_SUFFIX@
 SYMLINK_LIB = @SYMLINK_LIB@
 UNSYMLINK_LIB = @UNSYMLINK_LIB@
 LN_S = @LN_S@
