--- a/src/examples/dicttest/Makefile
+++ b/src/examples/dicttest/Makefile
@@ -1,7 +1,7 @@
 PROG_NOINST = dicttest
 SRCS = dicttest.c
 
-include ../../../mk/buildsys.mk
+include ../../../buildsys.mk
 
 CPPFLAGS += -I../../libmowgli
 LIBS += -L../../libmowgli -lmowgli
