--- a/src/examples/listsort/Makefile
+++ b/src/examples/listsort/Makefile
@@ -1,7 +1,7 @@
 PROG_NOINST = listsort
 SRCS = listsort.c
 
-include ../../../mk/buildsys.mk
+include ../../../buildsys.mk
 
 CPPFLAGS += -I../../libmowgli
 LIBS += -L../../libmowgli -lmowgli
