--- a/src/examples/randomtest/Makefile
+++ b/src/examples/randomtest/Makefile
@@ -1,7 +1,7 @@
 PROG_NOINST = randomtest
 SRCS = randomtest.c
 
-include ../../../mk/buildsys.mk
+include ../../../buildsys.mk
 
 CPPFLAGS += -I../../libmowgli
 LIBS += -L../../libmowgli -lmowgli
