--- a/configure.ac
+++ b/configure.ac
@@ -19,8 +19,10 @@ AC_ISC_POSIX
 PACKAGE="libmowgli"
 AC_SUBST(PACKAGE)
 
+BUILDSYS_PROG_SUFFIX
+
 # Checks for libraries.
-AM_SHARED_LIB
+BUILDSYS_SHARED_LIB
 AM_DL
 LIBS="$LIBS $DYNAMIC_LD_LIBS"
 
